tests/reference/asr-test_set_object2-41401ff.stderr
semantic error: Unhashable type: 'dict'
 --> tests/errors/test_set_object2.py:4:17
  |
4 |     my_set: set[dict[i32, str]] = {{1: "a", 2: "b"}, {3: "c", 4: "d"}}
  |                 ^^^^^^^^^^^^^^ Mutable type 'dict' cannot be stored in a set.
